[project]
name = "rav"
version = "0.4.0"
authors = [
  { name="Justin Mitchel", email="hello@teamcfe.com" },
]
description = "A cross-platform Python CLI to shortcut tp command-line commands. Inspired by Makefiles and npm scripts."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire",
    "PyYAML",
    "rich",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/jmitchel3/rav"
"Bug Tracker" = "https://github.com/jmitchel3/rav/issues"

[project.scripts]
rav = "rav.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
